# openapi/v1.json
@@ -3349,6 +3349,11 @@
                     "minimum": 0,
                     "maximum": 9007199254740991
                   },
+                  "activitiesWithStoredPhotos": {
+                    "type": "integer",
+                    "minimum": 0,
+                    "maximum": 9007199254740991
+                  },
                   "current": {
                     "type": "integer",
                     "minimum": 0,
